--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,17 +4,23 @@
   </button>
   <span>Học Material</span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+  <button mat-icon-button>
     <mat-icon>home</mat-icon>
   </button>
 </mat-toolbar>
 <mat-sidenav-container>
   <!-- mode: over, push, side -->
   <mat-sidenav [(opened)]="opened" mode="side">
-    Start
+    <mat-list>
+      <mat-list-item><a routerLink="/dashboard">DashBoard</a></mat-list-item>
+      <mat-list-item><a routerLink="/danhmuc">Danh mục</a></mat-list-item>
+    </mat-list>
+
+
+
   </mat-sidenav>
   <mat-sidenav-content>
-    End
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 
 </mat-sidenav-container>
