--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,13 +15,27 @@
 
 
     <mat-accordion>
-      <mat-expansion-panel>
+      <mat-expansion-panel style="background: transparent;">
         <mat-expansion-panel-header>
-          <mat-panel-title>Section Two</mat-panel-title>
+          <mat-panel-title style="color: white;">Mục 1</mat-panel-title>
         </mat-expansion-panel-header>
         <mat-nav-list>
-          <mat-list-item><a routerLink="/dashboard">DashBoard</a></mat-list-item>
-          <mat-list-item><a routerLink="/danhmuc">Danh mục</a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none"
+              routerLink="/dashboard">DashBoard</a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc">Danh
+              mục</a></mat-list-item>
+        </mat-nav-list>
+      </mat-expansion-panel>
+
+      <mat-expansion-panel style="background: transparent;">
+        <mat-expansion-panel-header>
+          <mat-panel-title style="color: white;">Mục 2</mat-panel-title>
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+          <mat-list-item><a style="color: white; text-decoration:none"
+              routerLink="/dashboard">DashBoard</a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc">Danh
+              mục</a></mat-list-item>
         </mat-nav-list>
       </mat-expansion-panel>
     </mat-accordion>
