--- a/src/app/danhmuc/danhmuc.component.html
+++ b/src/app/danhmuc/danhmuc.component.html
@@ -1,5 +1,5 @@
 <p>danhmuc works!</p>
-<mat-accordion>
+<mat-accordion multi="false">
     <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
@@ -9,14 +9,28 @@
                 This is a summary of the content
             </mat-panel-description>
         </mat-expansion-panel-header>
-
         <div>
-
             <mat-form-field>
                 <mat-label>Description</mat-label>
                 <input matInput>
             </mat-form-field>
+        </div>
+    </mat-expansion-panel>
 
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                This is the expansion title
+            </mat-panel-title>
+            <mat-panel-description>
+                This is a summary of the content
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+        <div>
+            <mat-form-field>
+                <mat-label>Description</mat-label>
+                <input matInput>
+            </mat-form-field>
         </div>
     </mat-expansion-panel>
 </mat-accordion>
