--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,26 @@
 <p>dashboard works!</p>
+<mat-form-field style="width: 50px;" color="primary" appearance="fill">
+    <mat-label>fill</mat-label>
+    <input matInput>
+    <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
+</mat-form-field>
+<mat-form-field appearance="outline">
+    <mat-label>outline</mat-label>
+    <input matInput>
+</mat-form-field>
+
+
+
+
+
+<mat-form-field>
+    <mat-label>Select</mat-label>
+    <mat-select>
+        <mat-option value="one">First option</mat-option>
+        <mat-option value="two">Second option</mat-option>
+    </mat-select>
+</mat-form-field>
+<mat-form-field>
+    <mat-label>Textarea</mat-label>
+    <textarea matInput></textarea>
+</mat-form-field>
