Xong ca fieald danh mục

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,15 +15,23 @@
 
 
     <mat-accordion>
+
+      <mat-nav-list>
+        <mat-list-item><a style="color: white; text-decoration:none"
+            routerLink="/dashboard">DashBoard</a></mat-list-item>
+      </mat-nav-list>
+
       <mat-expansion-panel style="background: transparent;">
         <mat-expansion-panel-header>
-          <mat-panel-title style="color: white;">Mục 1</mat-panel-title>
+          <mat-panel-title style="color: white;">Danh mục</mat-panel-title>
         </mat-expansion-panel-header>
         <mat-nav-list>
-          <mat-list-item><a style="color: white; text-decoration:none"
-              routerLink="/dashboard">DashBoard</a></mat-list-item>
-          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc">Danh
-              mục</a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc/phongban">Phòng
+              ban </a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc/chucvu">Chức
+              vụ</a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc/nhanvien">Nhân
+              viên</a></mat-list-item>
         </mat-nav-list>
       </mat-expansion-panel>
 
