--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <mat-toolbar color="primary">
+<mat-toolbar color="primary">
   <button mat-icon-button (click)="opened=!opened">
     <mat-icon>menu</mat-icon>
   </button>
@@ -7,9 +7,9 @@
   <button mat-icon-button routerLink="./">
     <mat-icon>home</mat-icon>
   </button>
-</mat-toolbar> -->
+</mat-toolbar>
 
-<!-- <mat-sidenav-container>
+<mat-sidenav-container>
  
   <mat-sidenav [(opened)]="opened" mode="side">
 
@@ -51,36 +51,4 @@
   <mat-sidenav-content>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
-</mat-sidenav-container> -->
-<table mat-table [dataSource] = "dataSource" class="mat-elevation-z3">
-
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef= "let element"> {{element.position}} </td>
-  </ng-container>
-
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef= "let element"> {{element.name}} </td>
-  </ng-container>
-
-  <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef= "let element"> {{element.weight}} </td>
-  </ng-container>
-
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef= "let element"> {{element.symbol}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef= "let row; columns: displayedColumns;"></tr>
-</table>
+</mat-sidenav-container>
