--- a/src/app/danhmuc/nhanvien/nhanvien.component.html
+++ b/src/app/danhmuc/nhanvien/nhanvien.component.html
@@ -1,19 +1,19 @@
 <h1>Danh mục nhân viên</h1>
 
-<mat-form-field color="primary">
+<mat-form-field style="color: primary; width: 400px">
     <mat-label>Mã nhân viên</mat-label>
     <input matInput>
     <mat-hint align="end">Không dấu, viết liền ^</mat-hint>
       </mat-form-field>
       
-<mat-form-field color="primary" style="position: fixed; left:600px;width: 500px;">
+<mat-form-field color="primary" style="margin-left: 100px; width: 400px;">
       <mat-label>Tên nhân viên</mat-label>
     <input matInput>
 </mat-form-field>
 <br>
       <br>
       <br>
-<mat-form-field style="width: 250px;">
+<mat-form-field style="color: primary; width: 400px">
     <mat-label>Phòng-Khoa</mat-label>
     <mat-select>
         <mat-option value="one">Phòng Kế toán</mat-option>
@@ -21,7 +21,7 @@
         <mat-option value="two">Phòng Nhân sự</mat-option>
     </mat-select>
 </mat-form-field>
-<mat-form-field style="position: fixed; left:600px; width: 200px;">
+<mat-form-field style="margin-left: 100px; width: 400px;">
     <mat-label>Chức danh</mat-label>
     <mat-select>
         <mat-option value="one">Nhân viên tạp vụ</mat-option>
@@ -30,3 +30,46 @@
         <mat-option value="two">Giám đốc vận hành</mat-option>
     </mat-select>
 </mat-form-field>
+<div >
+<hr style="margin-top: 100px;">
+    <button mat-raised-button color="primary" style="margin-left: 20px;">Thêm</button>
+    <button mat-raised-button color="primary" style="margin-left: 10px;">Sửa</button>
+    <button mat-raised-button color="primary" style="margin-left: 10px;">Xóa</button>
+<table mat-table [dataSource] = "dataSource" class="mat-elevation-z3" style="margin-top: 20px;">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="stt">
+    <th mat-header-cell *matHeaderCellDef style="width: 20px;"> STT </th>
+    <td mat-cell *matCellDef= "let element"> {{element.stt}} </td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="ma">
+    <th mat-header-cell *matHeaderCellDef> Mã nhân viên </th>
+    <td mat-cell *matCellDef= "let element"> {{element.ma}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="ten">
+    <th mat-header-cell *matHeaderCellDef> Tên nhân viên </th>
+    <td mat-cell *matCellDef= "let element"> {{element.ten}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="chucdanh">
+    <th mat-header-cell *matHeaderCellDef> Chức danh </th>
+    <td mat-cell *matCellDef= "let element"> {{element.chucdanh}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="phongban">
+    <th mat-header-cell *matHeaderCellDef> Phòng ban</th>
+    <td mat-cell *matCellDef= "let element"> {{element.phongban}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef= "let row; columns: displayedColumns;"></tr>
+</table>
+</div>
