--- a/src/app/danhmuc/nhanvien/nhanvien.component.html
+++ b/src/app/danhmuc/nhanvien/nhanvien.component.html
@@ -35,7 +35,9 @@
     <button mat-raised-button color="primary" style="margin-left: 20px;">Thêm</button>
     <button mat-raised-button color="primary" style="margin-left: 10px;">Sửa</button>
     <button mat-raised-button color="primary" style="margin-left: 10px;">Xóa</button>
-<table mat-table [dataSource] = "dataSource" class="mat-elevation-z3" style="margin-top: 20px;">
+    <button mat-raised-button color="primary" style="margin-left: 260px;">Lưu</button>
+    <button mat-raised-button color="primary" style="margin-left: 10px;">Không lưu</button>
+<table mat-table [dataSource] = "dataSource" class="mat-elevation-z3" style="margin-top: 10px;">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
