done phần danh mục

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 </mat-toolbar>
 
 <mat-sidenav-container>
- 
+
   <mat-sidenav [(opened)]="opened" mode="side">
 
 
@@ -32,6 +32,12 @@
               vụ</a></mat-list-item>
           <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc/nhanvien">Nhân
               viên</a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc/nhomchiphi">Nhóm chi
+              phí</a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc/loaichiphi">Loại chi
+              phí</a></mat-list-item>
+          <mat-list-item><a style="color: white; text-decoration:none" routerLink="/danhmuc/hangmuc">Hạng
+              mục</a></mat-list-item>
         </mat-nav-list>
       </mat-expansion-panel>
 
